--- a/weatherVue.html
+++ b/weatherVue.html
@@ -111,7 +111,7 @@
                 };
             },
             mounted() {
-                const url = 'https://opendata.cwb.gov.tw/api/v1/rest/datastore/F-C0032-001?Authorization=CWB-35EE947C-462C-4CCD-A87B-CE2A3EB7A484';
+                const url = 'https://opendata.cwa.gov.tw/api/v1/rest/datastore/F-C0032-001?Authorization=CWB-35EE947C-462C-4CCD-A87B-CE2A3EB7A484&format=JSON';
 
                 fetch(url)
                     .then(response => response.json())
